--- a/Task 1/CMakeLists.txt
+++ b/Task 1/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Task_1)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Task_1 main.cpp src/Curves.cpp src/Curves.h src/Circle.cpp src/Circle.h src/Ellipse.cpp src/Ellipse.h src/Curves_Container.cpp src/Curves_Container.h)
+add_executable(Task_1 main.cpp include/Curves.h include/Circle.h include/Ellipse.h include/Curves_Container.h)
